--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.25.3",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "nuxt": "^2.15.8",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.26.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
